<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/app_name_full" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites_text" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/select_category_text" />
    </group>

    <item android:title="Социальное">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_menu_title" />
            <item android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_menu_title" />
        </menu>
    </item>
</menu>